# save.s-mc.io

./: .dev.vars  Cargo.toml  Makefile  README.md  Trunk.toml  flake.nix  wrangler.toml
common/: Cargo.toml
common/src/: lib.rs
frontend/: Cargo.toml  README.md  Trunk.toml  index.html  index.scss  package-lock.json  package.json  tailwind.config.js
frontend/public/: pgp.txt  styles.scss
frontend/public/static/css/webtui/: button.css  catppuccin.css  popover.css  radio.css  style.css
frontend/self_signed_certs/: cert.pem  key.pem
frontend/src/: app.rs  lib.rs  main.rs
frontend/src/components/: mod.rs  popover.rs  turnstile.rs
frontend/src/pages/: mod.rs  read.rs  register.rs  save.rs
frontend/src/providers/: api.rs  mod.rs  pgp.rs  pgputils.rs
frontend/src/routes/: mod.rs  send.rs
frontend/static/: tailwind.css
frontend/static/webtui/: badge.css  box.css  button.css  catppuccin.css
migrations/: 0001_users.sql  0002_saved_data.sql  0003_passkey_credentials.sql
scripts/: static-routes.rs
worker/: Cargo.toml  schema.sql
worker/src/: error.rs  extractors.rs  lib.rs  logger.rs  passkey_utils.rs  routes.rs  turnstile.rs
worker/src/http/: context.rs  extractors.rs  mod.rs
worker/src/routes/: auth.rs  mod.rs  read.rs  register.rs  save.rs
