[package]
name = "frontend"
version = "0.1.0"
edition = "2024"
authors = ["Sam M <git@s-mc.io>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { version = "0.8", features = ["csr"] }
leptos_meta = { version = "0.8" }
leptos_router = { version = "0.8" }
common = { path = "../common", version = "*" }
console_error_panic_hook = "0.1.7"
gloo = "0.11.0"
gloo-net = { workspace = true }
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }
wasm-bindgen = { version = "0.2.100" }
wasm-bindgen-futures = "0.4.50"
wasm-logger = "0.2.0"
web-sys = { version = "0.3.77", features = [
    "Attr",
    "CredentialCreationOptions",
    "CredentialsContainer",
    "PublicKeyCredential",
    "AuthenticatorResponse",
    "AuthenticatorAssertionResponse",
] }
pgp = { workspace = true }
rand = { version = "0.8.5", features = ["std_rng"], default-features = false }
anyhow = "1.0.98"
leptos-use = "0.16.2"
chrono = "0.4.41"
struct_iterable = { workspace = true }
serde-wasm-bindgen = "0.6.5"
webauthn-rs-proto = { workspace = true }

# utils
# strum = { version = "0.25", features = ["derive", "strum_macros"] }
# strum_macros = "0.25"

[features]
default = ["turnstile"]
turnstile = []

[dev-dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-test = "0.3"
web-sys = { version = "0.3", features = ["Document", "Window"] }
