[package]
name = "worker"
version = "0.1.0"
edition = "2024"
authors = ["Sam M <git@s-mc.io>"]

[package.metadata.release]
release = false

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
passkey-types.workspace = true
common = { path = "../common", version = "*" }
worker = { version = "0.6.0", features = ['http', 'axum', 'd1'] }
worker-macros = { version = "0.6.0", features = ['http'] }
axum = { version = "0.8", default-features = false, features = [
    "query",
    "json",
    "macros",
] }
tower-service = "0.3.3"
console_error_panic_hook = { version = "0.1.7" }
serde = { version = "1.0.219", features = ["derive"] }
log = "0.4.27"
thiserror = "2.0.12"
anyhow = "1.0.98"
reqwest = { version = "0.12.20", features = ["json", "blocking"] }
coset = "0.3.8"
async-trait = "0.1.88"
serde_json = "1.0.140"
getrandom = { version = "0.3.4", features = ["wasm_js"] }
uuid = { version = "1.19.0", features = ["js", "v4"] }
ciborium = { version = "0.2.2", default-features = false }
serde_bytes = { version = "0.11.19", default-features = false, features = [
    "alloc",
] }
